--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>Station</title>
-
-  <script async src="https://docs.opencv.org/4.5.4/opencv.js" onload="Camera()" type="text/javascript"></script>
+  <!-- onload="Camera()" -->
+  <script async src="https://docs.opencv.org/4.5.4/opencv.js"  type="text/javascript"></script>
 
 </head>
 
